chore: updates to z-index and link color

--- a/app/src/app/business/BusinessDetails/InvestNowWidget/InvestNowWidget.module.scss
+++ b/app/src/app/business/BusinessDetails/InvestNowWidget/InvestNowWidget.module.scss
@@ -3,7 +3,7 @@
 .invest-now-widget {
   position: fixed;
   width: 100%;
-  z-index: $z-index-navigation;
+  z-index: $z-index-content;
   margin-top: $space-default;
 
   &__risk-level {
