--- a/app/src/theme/_variables.scss
+++ b/app/src/theme/_variables.scss
@@ -7,6 +7,7 @@ $navbar-height: 70px;
 $navbar-logo-width: 153px;
 
 // Z-index
+$z-index-content: 2;
 $z-index-navigation: 3;
 $z-index-modal: 4;
 $z-index-form-dropdown: 5;
