--- a/app/src/theme/globals.scss
+++ b/app/src/theme/globals.scss
@@ -190,7 +190,7 @@ body[data-theme="light"] {
   --color-typography-mini-button-label: var(--color-dark-10);
   --color-typography-description: var(--color-dark-5);
   --color-typography-mini-description: var(--color-dark-4);
-  --color-typography-link: var(--color-status-info);
+  --color-typography-link: var(--color-primary);
 
   // Tab
   --color-tab-navigation-border: var(--color-dark-7);
