feat: InvestNowWidget maturity_date #40 (#44)
* chore: adds api routes

* chore: gets dynamic store & campaign values for invoice metadata

* feat: dropdown items in NavBar

* feat: account navbar widget

* feat: gets total investors database provider util

This commit refactors how models are instantiated.

* feat: gets total sats invested from campaign transactions aggregate

* chore: updates InvestNowWidget structure

* chore: updates database package

* feat: adds maturity_date column and displays it formatted #40

* chore: updates to z-index and link color

--- a/app/src/app/business/BusinessDetails/InvestNowWidget/InvestNowWidget.module.scss
+++ b/app/src/app/business/BusinessDetails/InvestNowWidget/InvestNowWidget.module.scss
@@ -3,7 +3,7 @@
 .invest-now-widget {
   position: fixed;
   width: 100%;
-  z-index: $z-index-navigation;
+  z-index: $z-index-content;
   margin-top: $space-default;
 
   &__risk-level {
@@ -45,7 +45,7 @@
     border-radius: $border-radius;
     @include boxShadowInset;
 
-    p {
+    &--text {
       margin-bottom: 0;
     }
 
@@ -59,19 +59,21 @@
 
   &__goal {
     padding: $space-m 0;
-    h4,
-    p {
+
+    &--text,
+    &--heading {
       margin-bottom: 0;
+      line-height: 1;
     }
 
-    p {
-      line-height: 1;
+    &--text {
+      margin-left: 25px;
     }
 
     > div {
       background-color: var(--color-background-contrast);
       margin-bottom: $space-s;
-      border-left: 2px solid var(--color-status-info);
+      border-left: 3px solid var(--color-primary);
       padding: $space-s;
       display: flex;
       flex-direction: column;
