chore: runs prettier

--- a/app/plop-templates/component/Component.types.hbs
+++ b/app/plop-templates/component/Component.types.hbs
@@ -1,4 +1,4 @@
-import { ReactNode, CSSProperties } from 'react';
+import { ReactNode } from 'react';
 
 export type {{pascalCase name}}Props = {
   children: ReactNode;
