--- a/app/src/app/business/BusinessDetails/BusinessHeader/BusinessHeader.module.scss
+++ b/app/src/app/business/BusinessDetails/BusinessHeader/BusinessHeader.module.scss
@@ -6,12 +6,12 @@
 
   &__cover-image {
     display: block;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
     height: 280px;
     border-top-left-radius: $border-radius;
     border-top-right-radius: $border-radius;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
   }
 
   &__description {
@@ -23,10 +23,13 @@
   }
 
   &__map {
-    width: 100%;
-    height: 210px;
-    position: relative;
-    background-color: var(--color-dark-3);
+    @include atLargeTablet {
+      position: relative;
+      width: 100%;
+      height: 210px;
+      background-color: var(--color-dark-3);
+    }
+    display: none;
   }
 
   &__link {
