chore: sign up form breakpoints

--- a/app/src/theme/_base.scss
+++ b/app/src/theme/_base.scss
@@ -71,7 +71,11 @@ $sidebar-width: 320px;
 }
 
 @mixin withNavbar {
-  padding-top: $navbar-height;
+  padding-top: $navbar-height-mobile;
+
+  @include atLargeTablet {
+    padding-top: $navbar-height;
+  }
 }
 
 @mixin normalizeTypography {
