--- a/app/src/theme/_variables.scss
+++ b/app/src/theme/_variables.scss
@@ -4,7 +4,9 @@
 // consistent naming. Ex: $nav-link-disabled-color and $modal-content-box-shadow-xs.
 
 $navbar-height: 70px;
+$navbar-height-mobile: 56px;
 $navbar-logo-width: 153px;
+$navbar-logo-width-mobile: 114px;
 
 // Z-index
 $z-index-content: 2;
