--- a/app/src/app/home/home/Home.module.scss
+++ b/app/src/app/home/home/Home.module.scss
@@ -4,10 +4,6 @@
   min-height: 100vh;
   background-color: var(--color-primary);
 
-  &__auth-email-card {
-    margin-top: $space-l;
-  }
-
   &__intro {
     &--headline {
       margin-bottom: $space-ml;
@@ -47,6 +43,7 @@
       background-color: var(--color-primary);
 
       &--welcome {
+        @include font-properties($typography-headline-5);
         @include atTablet {
           margin-bottom: 0;
           text-align: left;
