--- a/app/src/ui/form/auth-email-form/AuthEmailForm.module.scss
+++ b/app/src/ui/form/auth-email-form/AuthEmailForm.module.scss
@@ -1,39 +1,49 @@
 @import "../../../theme/base";
 
 .auth-email-form {
-  background-color: var(--color-background-contrast);
-  padding: $space-default;
-  padding-top: $space-ml;
   @include boxShadowInset;
   border-radius: $border-radius;
+  padding: $space-default;
+  padding-top: $space-ml;
+  background-color: var(--color-background-contrast);
 
   &__input {
     input {
-      background-color: var(--color-background) !important;
       margin-bottom: 0 !important;
+      background-color: var(--color-background) !important;
     }
   }
 
   &__inline-wrapper {
-    display: flex;
-
-    &--form {
-      flex-basis: 70%;
+    @include atLargeTablet {
       display: flex;
-      flex-direction: column;
-      justify-content: center;
+
+      &--form {
+        display: flex;
+        flex-basis: 70%;
+        flex-direction: column;
+        justify-content: center;
+      }
+
+      &--button {
+        display: flex;
+        flex-basis: 30%;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        margin-top: 0;
+        padding-left: $space-default;
+
+        button {
+          background-color: var(--color-background);
+        }
+      }
     }
 
     &--button {
-      padding-left: $space-default;
-      flex-basis: 30%;
       display: flex;
-      flex-direction: column;
-      justify-content: center;
-
-      button {
-        background-color: var(--color-background);
-      }
+      justify-content: flex-end;
+      margin-top: $space-default;
     }
   }
 }
