--- a/app/src/app/business/BusinessDetails/BusinessHeader/BusinessHeader.module.scss
+++ b/app/src/app/business/BusinessDetails/BusinessHeader/BusinessHeader.module.scss
@@ -25,6 +25,7 @@
   &__map {
     @include atLargeTablet {
       position: relative;
+      display: block;
       width: 100%;
       height: 210px;
       background-color: var(--color-dark-3);
