--- a/app/src/ui/generic-loader/GenericLoader.module.scss
+++ b/app/src/ui/generic-loader/GenericLoader.module.scss
@@ -1,15 +1,21 @@
 @import "src/theme/base";
 
 .generic-loader {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: $z-index-content;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   animation: focus 1s infinite;
 
   &__logo {
-    max-width: 20%;
+    width: 140px;
     animation: pulse 1s infinite;
   }
 }
