chore: updates stylelint order

--- a/app/src/ui/form/auth-email-form/AuthEmailForm.module.scss
+++ b/app/src/ui/form/auth-email-form/AuthEmailForm.module.scss
@@ -1,12 +1,10 @@
-@import "../../../theme/base";
+@import "src/theme/base";
 
 .auth-email-form {
   border-radius: $border-radius;
   padding: $space-default;
   padding-top: $space-ml;
   background-color: var(--color-background-contrast);
-
-  @include boxShadowInset;
 
   &__input {
     input {
@@ -16,6 +14,12 @@
   }
 
   &__inline-wrapper {
+    &--button {
+      display: flex;
+      justify-content: flex-end;
+      margin-top: $space-default;
+    }
+
     @include atLargeTablet {
       display: flex;
 
@@ -40,11 +44,7 @@
         }
       }
     }
-
-    &--button {
-      display: flex;
-      justify-content: flex-end;
-      margin-top: $space-default;
-    }
   }
+
+  @include boxShadowInset;
 }
