chore: deadline fixes #58 (#63)
* chore: translates Sign In cta

* chore: updates stylelint config

* chore: updates stylelint order

* chore: fixes addition

* chore: removes replace regexp logic

* chore: target blank to social links

* chore: adds SAT unit to card

* chore: translates BusinessCampaignCard

* chore: total investors count translation

* chore: translates Toast and toast content

* chore: funding progress bar breakpoints

* chore: determines default checkout & auth redirect language

--- a/app/src/ui/form/auth-email-form/AuthEmailForm.module.scss
+++ b/app/src/ui/form/auth-email-form/AuthEmailForm.module.scss
@@ -1,7 +1,6 @@
-@import "../../../theme/base";
+@import "src/theme/base";
 
 .auth-email-form {
-  @include boxShadowInset;
   border-radius: $border-radius;
   padding: $space-default;
   padding-top: $space-ml;
@@ -15,6 +14,12 @@
   }
 
   &__inline-wrapper {
+    &--button {
+      display: flex;
+      justify-content: flex-end;
+      margin-top: $space-default;
+    }
+
     @include atLargeTablet {
       display: flex;
 
@@ -39,11 +44,7 @@
         }
       }
     }
-
-    &--button {
-      display: flex;
-      justify-content: flex-end;
-      margin-top: $space-default;
-    }
   }
+
+  @include boxShadowInset;
 }
