feat: home intro CTAs

--- a/app/src/app/home/home/Home.module.scss
+++ b/app/src/app/home/home/Home.module.scss
@@ -1,4 +1,5 @@
 @import "src/theme/base";
+@import "src/theme/button/primary";
 
 .home {
   min-height: 100vh;
@@ -21,7 +22,27 @@
     }
 
     &--cta {
-      margin-top: $space-ml;
+      display: block;
+      margin-top: $space-s;
+      padding: 0;
+      text-transform: inherit;
+      text-decoration: underline;
+      color: var(--color-primary);
+      background-color: transparent;
+
+      &:hover,
+      &:active,
+      &:focus {
+        background-color: transparent;
+      }
+
+      @extend .button_primary;
+
+      @include atLargeTablet {
+        display: inline-block;
+        margin-top: 0;
+        margin-left: $space-m;
+      }
     }
 
     &--text-block {
