--- a/app/src/ui/button/Button.module.scss
+++ b/app/src/ui/button/Button.module.scss
@@ -1,6 +1,6 @@
-@import "../../theme/base";
-@import "../../theme/button/primary";
-@import "../../theme/button/button-outline";
+@import "src/theme/base";
+@import "src/theme/button/primary";
+@import "src/theme/button/button-outline";
 
 $LOADER_SIZE: 30px;
 $HALF_LOADER_SIZE: 15px;
